module/postponed/type_constructor/tests/inc/single/single_nested_type_test.rs
use type_constructor::prelude::*;


fn main()
{
  types!
  {

    single Bad : std::sync::Arc< std::sync::Mutex< T > >;

  }
}
